--- a/translations/en.json
+++ b/translations/en.json
@@ -209,25 +209,9 @@
     "nsfw": "NSFW",
     "show_nsfw": "Show NSFW content",
     "theme": "Theme",
-    "sponsors": "Sponsors",
-    "sponsors_of_lemmy": "Sponsors of Lemmy",
-    "sponsor_message":
-      "Lemmy is free, <1>open-source</1> software, with no advertising, monetizing, or venture capital, ever. Your donations directly support full-time development of the project. Thank you to the following people:",
-    "support_on_patreon": "Support on Patreon",
-    "support_on_liberapay": "Support on Liberapay",
-    "support_on_open_collective": "Support on OpenCollective",
-    "donate_to_lemmy": "Donate to Lemmy",
-    "donate": "Donate",
-    "general_sponsors":
-      "General Sponsors are those that pledged $10 to $39 to Lemmy.",
-    "silver_sponsors":
-      "Silver Sponsors are those that pledged $40 to Lemmy.",
-    "crypto": "Crypto",
-    "bitcoin": "Bitcoin",
-    "ethereum": "Ethereum",
-    "monero": "Monero",
     "code": "Code",
     "joined": "Joined",
+    "join_lemmy": "Join Lemmy",
     "by": "by",
     "to": "to",
     "from": "from",
@@ -236,9 +220,6 @@
     "are_you_sure": "are you sure?",
     "yes": "yes",
     "no": "no",
-    "powered_by": "Powered by",
-    "landing_0":
-      "Lemmy is a <1>link aggregator</1> / reddit alternative, intended to work in the <2>fediverse</2>.<3></3>It's self-hostable, has live-updating comment threads, and is tiny (<4>~80kB</4>). Federation into the ActivityPub network is on the roadmap. <5></5>This is a <6>very early beta version</6>, and a lot of features are currently broken or missing. <7></7>Suggest new features or report bugs <8>here.</8><9></9>Made with <10>Rust</10>, <11>Actix</11>, <12>Inferno</12>, <13>Typescript</13>. <14></14> <15>Thank you to our contributors: </15> dessalines, Nutomic, asonix, zacanger, and iav.",
     "not_logged_in": "Not logged in.",
     "bio_length_overflow": "User bio cannot exceed 300 characters.",
     "logged_in": "Logged in.",
