Add support_lemmy field.

--- a/translations/en.json
+++ b/translations/en.json
@@ -212,6 +212,7 @@
     "code": "Code",
     "joined": "Joined",
     "join_lemmy": "Join Lemmy",
+    "support_lemmy": "Support Lemmy",
     "by": "by",
     "to": "to",
     "from": "from",
