translation:  fix small error

--- a/translations/de.json
+++ b/translations/de.json
@@ -171,7 +171,7 @@
     "couldnt_update_community": "Konnte die Community nicht aktualisieren.",
     "community_already_exists": "Die Community existiert bereits.",
     "community_moderator_already_exists": "Community-Moderator*in existiert bereits.",
-    "community_follower_already_exists": "Community-Abonennt*in existiert bereits.",
+    "community_follower_already_exists": "Community-Abonnent*in existiert bereits.",
     "community_user_already_banned": "Der*die Community-Benutzer*in ist schon gebannt.",
     "couldnt_create_post": "Konnte Beitrag nicht anlegen.",
     "couldnt_like_post": "Konnte Beitrag nicht liken.",
