--- a/translations/en.json
+++ b/translations/en.json
@@ -135,9 +135,10 @@
     "new": "New",
     "old": "Old",
     "top_day": "Top day",
-    "week": "Week",
-    "month": "Month",
-    "year": "Year",
+    "top_week": "Top Week",
+    "top_month": "Top Month",
+    "top_year": "Top Year",
+    "top_all": "Top All Time",
     "all": "All",
     "local": "Local",
     "top": "Top",
