Fixing top day.

--- a/translations/en.json
+++ b/translations/en.json
@@ -134,7 +134,7 @@
     "active": "Active",
     "new": "New",
     "old": "Old",
-    "top_day": "Top day",
+    "top_day": "Top Day",
     "top_week": "Top Week",
     "top_month": "Top Month",
     "top_year": "Top Year",
