Adding some more time fields.

--- a/translations/en.json
+++ b/translations/en.json
@@ -139,6 +139,11 @@
     "top_month": "Top Month",
     "top_year": "Top Year",
     "top_all": "Top All Time",
+    "day": "day",
+    "week": "week",
+    "month": "month",
+    "number_of_months": "{{count}} month",
+    "number_of_months_plural": "{{count}} months",
     "all": "All",
     "local": "Local",
     "top": "Top",
