Changing some counts to lower case.

--- a/translations/en.json
+++ b/translations/en.json
@@ -106,14 +106,14 @@
     "creator": "creator",
     "username": "Username",
     "email_or_username": "Email or Username",
-    "number_of_users": "{{count}} User",
-    "number_of_users_plural": "{{count}} Users",
-    "number_of_subscribers": "{{count}} Subscriber",
-    "number_of_subscribers_plural": "{{count}} Subscribers",
-    "number_of_points": "{{count}} Point",
-    "number_of_points_plural": "{{count}} Points",
-    "number_online": "{{count}} User Online",
-    "number_online_plural": "{{count}} Users Online",
+    "number_of_users": "{{count}} user",
+    "number_of_users_plural": "{{count}} users",
+    "number_of_subscribers": "{{count}} subscriber",
+    "number_of_subscribers_plural": "{{count}} subscribers",
+    "number_of_points": "{{count}} point",
+    "number_of_points_plural": "{{count}} points",
+    "number_online": "{{count}} user online",
+    "number_online_plural": "{{count}} users online",
     "name": "Name",
     "name_explain": "Name – used as the identifier for the community, cannot be changed.",
     "display_name": "Display name",
