Adding most comments.

--- a/translations/en.json
+++ b/translations/en.json
@@ -139,6 +139,7 @@
     "top_month": "Top Month",
     "top_year": "Top Year",
     "top_all": "Top All Time",
+    "most_comments": "Most Comments",
     "day": "day",
     "week": "week",
     "month": "month",
