Add active in the last.

--- a/translations/en.json
+++ b/translations/en.json
@@ -132,6 +132,7 @@
     "sort_type": "Sort type",
     "hot": "Hot",
     "active": "Active",
+    "active_in_the_last": "active in the last",
     "new": "New",
     "old": "Old",
     "top_day": "Top Day",
