--- a/translations/en.json
+++ b/translations/en.json
@@ -293,5 +293,8 @@
     "report_reason_required": "Report reason required.",
     "report_too_long": "Report too long.",
     "couldnt_create_report": "Couldn't create report.",
-    "couldnt_resolve_report": "Couldn't resolve report."
+    "couldnt_resolve_report": "Couldn't resolve report.",
+    "expand": "Expand",
+    "collapse": "Collapse",
+    "captcha": "Captcha"
 }
