Adding new comments.

--- a/translations/en.json
+++ b/translations/en.json
@@ -141,6 +141,7 @@
     "top_year": "Top Year",
     "top_all": "Top All Time",
     "most_comments": "Most Comments",
+    "new_comments": "New Comments",
     "day": "day",
     "week": "week",
     "month": "month",
