--- a/translations/zh.json
+++ b/translations/zh.json
@@ -5,30 +5,75 @@
     "create_a_post": "创建新帖子",
     "create_post": "创建帖子",
     "number_of_posts": "{{count}} 个帖子",
+    "number_of_posts_plural": "{{count}} 条帖子",
     "posts": "帖子",
     "related_posts": "这些帖子可能相关",
+    "cross_posts": "此链接也已发布到:",
+    "cross_post": "转发",
+    "cross_posted_to": "转发到: ",
     "comments": "评论",
     "number_of_comments": "{{count}} 条评论",
+    "number_of_comments_plural": "{{count}} 条评论",
     "remove_comment": "移除评论",
+    "remove_posts_comments": "删除帖子和评论",
     "communities": "社群",
+    "users": "用户",
     "create_a_community": "创建新社群",
+    "select_a_community": "选择一个社群",
     "create_community": "创建社群",
     "remove_community": "移除社群",
     "subscribed_to_communities": "订阅新<1>社群</1>",
     "trending_communities": "热门<1>社群</1>",
     "list_of_communities": "社群列表",
+    "number_of_communities": "{{count}} 社群",
+    "number_of_communities_plural": "{{count}} 个社群",
     "community_reqs": "小写字母、下划线（_）且不含空格。",
+    "invalid_community_name": "无效名称.",
+    "create_private_message": "创建私人消息",
+    "send_secure_message": "发送安全消息",
+    "send_message": "发送消息",
+    "message": "消息",
     "edit": "编辑",
     "reply": "回复",
+    "more": "更多",
     "cancel": "取消",
+    "preview": "预览",
+    "upload_image": "上传图片",
+    "avatar": "头像",
+    "upload_avatar": "上传头像",
+    "banner": "横幅",
+    "upload_banner": "上传横幅",
+    "icon": "图标",
+    "upload_icon": "上传图标",
+    "show_avatars": "显示头像",
+    "show_context": "显示上下文",
+    "formatting_help": "格式化帮助",
+    "sorting_help": "排序帮助",
+    "view_source": "查看源代码",
     "unlock": "解锁",
     "lock": "加锁",
+    "sticky": "粘贴",
+    "unsticky": "不粘",
     "link": "链接",
+    "archive_link": "存档链接",
+    "bold": "粗体",
+    "italic": "斜体",
+    "subscript": "下标",
+    "superscript": "上标",
+    "header": "标题行",
+    "strikethrough": "删除线",
+    "quote": "引用",
+    "spoiler": "剧透折叠",
+    "list": "列表",
     "mod": "社群管理",
     "mods": "社群管理",
     "moderates": "监管",
+    "settings": "设置",
+    "admin_settings": "管理员设置",
+    "site_config": "网站配置",
     "remove_as_mod": "删除社群管理权限",
     "appoint_as_mod": "任命为社群管理",
+    "leave_mod_team": "离开仲裁团队",
     "modlog": "管理记录",
     "admin": "总管理员",
     "admins": "总管理员",
@@ -37,25 +82,41 @@
     "remove": "移除",
     "removed": "已被社群管理移除",
     "locked": "已锁定",
+    "stickied": "已置顶",
     "reason": "原因",
     "mark_as_read": "标记为已读",
     "mark_as_unread": "标记为未读",
     "delete": "删除",
     "deleted": "作者已删除",
+    "delete_account": "删除账号",
+    "delete_account_confirm": "警告:此操作将永久删除你的数据，请输入密码进行确认。",
+    "click_to_delete_picture": "点击删除图片",
+    "picture_deleted": "图片已删除",
     "restore": "恢复",
     "ban": "禁止",
     "ban_from_site": "禁止此站点",
     "unban": "取消禁止",
     "unban_from_site": "取消禁止网站",
+    "banned": "已被禁止",
+    "banned_users": "被禁止用户",
     "save": "保存",
     "unsave": "取消保存",
     "create": "创建",
+    "creator": "创建者",
     "username": "用户名",
     "email_or_username": "邮箱或用户名",
-    "number_of_users": "{{count}} 名用户",
-    "number_of_subscribers": "{{count}} 名订阅者",
+    "number_of_users": "{{count}} 用户",
+    "number_of_users_plural": "{{count}} 名用户",
+    "number_of_subscribers": "{{count}} 订阅者",
+    "number_of_subscribers_plural": "{{count}} 名订阅者",
     "number_of_points": "{{count}} 积分",
+    "number_of_points_plural": "{{count}} 个积分",
+    "number_online": "{{count}} 在线用户",
+    "number_online_plural": "{{count}} 名在线用户",
     "name": "名称",
+    "name_explain": "名称 - 作为社区的标识符号，将来不能更改。",
+    "display_name": "显示名称",
+    "display_name_explain": "显示名称 — 在社区页面上显示的标题，将来可以更改。",
     "title": "标语",
     "category": "分类",
     "subscribers": "订阅",
@@ -69,18 +130,36 @@
     "sidebar": "介绍",
     "sort_type": "排序方式",
     "hot": "最热",
+    "active": "活跃",
+    "active_in_the_last": "最后活跃在",
     "new": "最新",
-    "top_day": "按日历史排名",
+    "old": "最早",
+    "top_day": "日推荐",
+    "top_week": "周推荐",
+    "top_month": "月推荐",
+    "top_year": "年推荐",
+    "top_all": "全部推荐",
+    "most_comments": "最多评论",
+    "new_comments": "新评论",
+    "day": "日",
+    "week": "周",
     "month": "月",
+    "number_of_months": "{{count}} 月",
+    "number_of_months_plural": "{{count}} 月份",
     "all": "所有",
+    "local": "本地",
     "top": "推荐",
     "api": "API",
-    "inbox": "收件箱",
+    "docs": "文档",
+     "inbox": "收件箱",
     "inbox_for": "<1>{{user}}</1> 收件箱",
     "mark_all_as_read": "标记所有已读",
     "type": "类型",
     "unread": "未读",
+    "replies": "回复",
+    "mentions": "提到",
     "reply_sent": "回复已发送",
+    "message_sent": "消息已发送",
     "search": "搜索",
     "overview": "个人中心",
     "view": "查看",
@@ -90,11 +169,36 @@
     "sign_up": "注册",
     "notifications_error": "你的浏览器不支持桌面通知，尝试 Firefox 或 Chrome。",
     "unread_messages": "未读消息",
+    "messages": "信息",
     "password": "密码",
+    "invalid_password": "密码无效。密码长度必须小于60个字符。",
     "verify_password": "确认密码",
+    "old_password": "当前密码",
+    "forgot_password": "忘记密码",
+    "reset_password_mail_sent": "发送邮件重置密码。",
+    "password_change": "修改密码",
+    "new_password": "新密码",
+    "no_email_setup": "此服务器还未正确设定邮箱。",
+    
     "email": "邮箱",
+    "matrix_user_id": "Matrix用户",
+    "private_message_disclaimer": "警告：Lemmy的私信功能并不安全。想要进行安全的信息传递，请在 <1>Element.io</1>上创建账号。",
+    "send_notifications_to_email": "向邮箱发送通知",
     "optional": "选项",
     "expires": "过期",
+    "language": "语言",
+    "browser_default": "浏览器默认语言",
+    "downvotes_disabled": "踩已禁用",
+    "enable_downvotes": "启用踩功能",
+    "upvote": "点赞",
+    "number_of_upvotes": "{{count}} 赞",
+    "number_of_upvotes_plural": "{{count}} 个赞",
+    "downvote": "狂踩",
+    "number_of_downvotes": "{{count}} 踩",
+    "number_of_downvotes_plural": "{{count}} 个踩",
+    "open_registration": "开放注册",
+    "registration_closed": "注册功能已关闭",
+    "enable_nsfw": "允许工作场所不宜内容",
     "url": "相关网址",
     "body": "内容",
     "copy_suggested_title": "复制建议的标题: {{title}}",
@@ -102,21 +206,40 @@
     "expand_here": "展开",
     "subscribe_to_communities": "订阅一些 <1>社群</1>.",
     "chat": "聊天",
+    "recent_comments": "最近评论",
     "no_results": "没有结果.",
     "setup": "设置",
-    "lemmy_instance_setup": "创设 Lemmy 实例",
+    "lemmy_instance_setup": "设置Lemmy实例",
     "setup_admin": "设置管理员",
     "your_site": "你的站点",
     "modified": "修改",
+    "nsfw": "工作场所不宜",
+    "show_nsfw": "显示工作场所不宜内容",
+    "theme": "主题",
     "code": "代码",
     "joined": "已加入",
+    "join_lemmy": "加入 Lemmy",
+    "support_lemmy": "支持 Lemmy",
+    "by": "",
+    "to": "发布到",
+    "from": "由",
+    "transfer_community": "转让社群",
+    "transfer_site": "站点转让",
+    "are_you_sure": "你确定吗？",
+    "yes": "是",
+    "no": "否",
     "not_logged_in": "未登录.",
+    "bio_length_overflow": "自我介绍不能超过300个字符。",
+    "logged_in": "已登录。",
+    "must_login": "您必须<1>登陆或注册</1>才能评论。",
+    "site_saved": "网站已保存.",
     "community_ban": "你已被此社群拉黑。",
     "site_ban": "你已被本站拉黑",
     "couldnt_create_comment": "无法创建评论。",
     "couldnt_like_comment": "无法点赞评论。",
     "couldnt_update_comment": "无法更新评论。",
     "couldnt_save_comment": "无法保存评论。",
+    "couldnt_get_comments": "无法获取评论。",
     "no_comment_edit_allowed": "没有编辑评论的权限。",
     "no_post_edit_allowed": "没有编辑帖子的权限。",
     "no_community_edit_allowed": "没有编辑社群的权限。",
@@ -127,163 +250,55 @@
     "community_follower_already_exists": "社群关注者已存在。",
     "community_user_already_banned": "社群用户已被禁止。",
     "couldnt_create_post": "无法创建帖子。",
+    "post_title_too_long": "帖子标题过长。",
     "couldnt_like_post": "无法点赞帖子。",
     "couldnt_find_post": "无法找到帖子。",
     "couldnt_get_posts": "无法获取帖子",
     "couldnt_update_post": "无法更新帖子",
     "couldnt_save_post": "无法保存帖子。",
+    "couldnt_find_parent_comment": "找不到父评论.",
+    "parent_comment_not_in_post": "父评论属于另一篇帖子.",
     "no_slurs": "文明语言。",
     "not_an_admin": "不是管理员。",
+    "not_a_moderator": "不是仲裁员.",
     "site_already_exists": "站点已存在。",
     "couldnt_update_site": "无法更新站点。",
     "couldnt_find_that_username_or_email": "用户名/邮箱不存在。",
     "password_incorrect": "密码不正确。",
     "passwords_dont_match": "密码不匹配。",
+    "no_password_reset": "没有邮箱，您将无法重设密码.",
+    "captcha_incorrect": "验证码不正确。",
+    "enter_code": "输入验证码",
+    "invalid_username": "用户名无效",
     "admin_already_created": "抱歉，管理员已存在。",
     "user_already_exists": "用户已存在。",
+    "email_already_exists": "邮箱已占用.",
     "couldnt_update_user": "无法更新用户。",
     "system_err_login": "系统错误。请尝试注销后重新登入。",
-    "nsfw": "工作场所不宜",
-    "show_nsfw": "显示工作场所不宜内容",
-    "theme": "主题",
-    "from": "由",
-    "to": "发布到",
-    "are_you_sure": "你确定吗？",
-    "yes": "是",
-    "no": "否",
-    "logged_in": "已登录。",
-    "message": "消息",
-    "create_private_message": "创建私信",
-    "send_secure_message": "发送安全消息",
-    "send_message": "发送消息",
-    "more": "更多",
-    "preview": "预览",
-    "upload_image": "上传图片",
-    "enable_nsfw": "允许工作场所不宜内容",
-    "show_avatars": "显示头像",
-    "avatar": "头像",
-    "formatting_help": "格式帮助",
-    "sorting_help": "排序帮助",
-    "view_source": "显示来源",
-    "sticky": "固定",
-    "unsticky": "取消固定",
-    "archive_link": "链接归档",
-    "settings": "设置",
-    "stickied": "已置顶",
-    "delete_account": "删除账号",
-    "delete_account_confirm": "警告！此操作将永久删除你的数据，请输入密码进行确认。",
-    "cross_posts": "此链接也已被发布到：",
-    "cross_post": "复数发布",
-    "cross_posted_to": "已被复数发布到： ",
-    "users": "用户",
-    "banned": "已被禁止",
-    "creator": "作者",
-    "number_of_communities": "{{count}} 个社群",
-    "old": "最早",
-    "docs": "文档",
-    "upload_avatar": "上传头像",
-    "replies": "回复",
-    "number_online": "{{count}} 名在线用户",
-    "mentions": "提到",
-    "message_sent": "消息已发送",
-    "old_password": "当前密码",
-    "forgot_password": "忘记密码",
-    "reset_password_mail_sent": "发送邮件重置密码。",
-    "password_change": "修改密码",
-    "new_password": "新密码",
-    "messages": "信息",
-    "no_email_setup": "此服务器还未正确设定邮箱。",
-    "matrix_user_id": "Matrix用户",
-    "private_message_disclaimer": "警告：Lemmy的私信功能并不安全。想要进行安全的信息传递，请在 <1>Riot.im</1>上创建账号。",
-    "send_notifications_to_email": "向邮箱发送通知",
-    "language": "语言",
-    "browser_default": "浏览器默认语言",
-    "downvotes_disabled": "反对投票已禁用",
-    "enable_downvotes": "启用反对投票功能",
-    "upvote": "点赞",
-    "number_of_upvotes": "{{count}} 个赞",
-    "downvote": "反对",
-    "number_of_downvotes": "{{count}} 个反对",
-    "open_registration": "开放注册",
-    "registration_closed": "注册功能已关闭",
-    "recent_comments": "最新评论",
-    "by": " ",
-    "transfer_community": "转让社群",
-    "transfer_site": "站点转让",
-    "post_title_too_long": "帖子标题过长。",
-    "couldnt_get_comments": "无法获取评论。",
-    "email_already_exists": "该邮箱已被占用。",
-    "couldnt_create_private_message": "无法创建私信。",
+     "couldnt_create_private_message": "无法创建私信。",
     "no_private_message_edit_allowed": "没有编辑私信的权限。",
     "couldnt_update_private_message": "无法更新私信。",
     "time": "时间",
     "action": "动作",
-    "block_leaving": "确定要离开吗？",
-    "show_context": "显示上下文",
-    "admin_settings": "管理员设置",
-    "site_config": "网站配置",
-    "banned_users": "被禁止用户",
-    "site_saved": "网站已保存",
     "emoji_picker": "选择表情",
-    "invalid_username": "用户名无效",
-    "invalid_community_name": "无效的名称",
-    "click_to_delete_picture": "点击删除图片",
-    "picture_deleted": "图片已删除",
-    "select_a_community": "选择一个社群",
-    "invalid_password": "密码无效。密码长度必须小于 60 字符。",
-    "banner": "横幅图片",
-    "upload_banner": "上传横幅图片",
-    "icon": "图标",
-    "upload_icon": "上传图标",
-    "leave_mod_team": "离开仲裁团队",
-    "name_explain": "名称 - 作为社区的标识符号，将来不能更改。",
-    "display_name": "显示名称",
-    "active": "活跃",
-    "display_name_explain": "显示名称 — 在社区页面上显示的标题，将来可以更改。",
-    "bio_length_overflow": "自我介绍不能超过 300 字符。",
-    "captcha_incorrect": "验证码不正确。",
-    "must_login": "您必须<1>登陆或注册</1>才能评论。",
-    "no_password_reset": "没有邮箱，您将无法重置您的密码。",
-    "bold": "粗体",
-    "italic": "斜体",
-    "subscript": "下标",
-    "superscript": "上标",
-    "header": "标题行",
-    "not_a_moderator": "不是仲裁员。",
-    "strikethrough": "删除线",
-    "quote": "引用",
-    "spoiler": "剧透折叠",
-    "list": "列表",
-    "top_all": "历史排名",
-    "top_month": "按月历史排名",
-    "top_week": "按周历史排名",
-    "top_year": "按年历史排名",
-    "number_of_months": "{{count}}个月",
-    "week": "周",
-    "most_comments": "最多评论",
-    "day": "日",
-    "report_reason_required": "请提供报告原因。",
-    "allowed_instances": "被允许的实例",
-    "couldnt_find_parent_comment": "找不到该评论。",
-    "parent_comment_not_in_post": "评论属于另一个帖子。",
-    "blocked_instances": "被禁止的实例",
-    "support_lemmy": "支持 Lemmy",
-    "join_lemmy": "加入 Lemmy",
-    "active_in_the_last": "最新活跃",
-    "bio": "自我介绍",
-    "remove_posts_comments": "移除帖子和评论",
-    "none_found": "找不到任何东西。",
-    "linked_instances": "已链接的实例",
-    "instances": "实例",
-    "local": "本地",
-    "enter_code": "输入验证码",
-    "what_is": "什么是",
-    "cake_day_info": "今天是{{creator_name}}的生日！",
-    "cake_day_title": "生日：",
+    "block_leaving": "确定要离开吗？",
+    "what_is": "是什么",
+    "cake_day_title": "蛋糕日:",
+    "cake_day_info": "今天是 {{ creator_name }}的蛋糕日!",
     "invalid_post_title": "帖子标题无效",
+    "invalid_url": "URL无效.",
     "play_captcha_audio": "播放验证码音频",
-    "report_too_long": "报告过长。",
-    "couldnt_resolve_report": "无法分析报告。",
-    "couldnt_create_report": "无法创建报告。",
-    "invalid_url": "网址无效。"
+    "bio": "简介",
+    "instances": "实例",
+    "linked_instances": "实例链接",
+    "allowed_instances": "允许实例",
+    "blocked_instances": "封锁实例",
+    "none_found": "未找到.",
+    "report_reason_required": "需要报告原因.",
+    "report_too_long": "报告时间过长.",
+    "couldnt_create_report": "无法创建报告.",
+    "couldnt_resolve_report": "无法解析报告.",
+    "expand": "扩展",
+    "collapse": "折叠",
+    "captcha": "验证码"
 }
