--- a/translations/en.json
+++ b/translations/en.json
@@ -263,6 +263,7 @@
     "no_slurs": "No slurs.",
     "not_an_admin": "Not an admin.",
     "not_a_moderator": "Not a moderator.",
+    "not_a_mod_or_admin": "Not a moderator or admin.",
     "site_already_exists": "Site already exists.",
     "couldnt_update_site": "Couldn't update site.",
     "couldnt_find_that_username_or_email":
