--- a/translations/en.json
+++ b/translations/en.json
@@ -4,5 +4,30 @@
   "lemmy": "Lemmy",
   "lemmy_desc": "A link aggregator for the fediverse.",
   "follow_communities": "Follow communities anywhere in the world",
-  "lemmy_long_desc": "<1>Lemmy</1> is similar to sites like <2>Reddit</2>, <3>Lobste.rs</3>, or <4>Hacker News</4>: you subscribe to communities you're interested in, post links and discussions, then vote and comment on them. Lemmy isn't just a reddit alternative; its a network of interconnected communities ran by different people and organizations, all combining to create <5>a single, personalized front page</5> of your favorite news, articles, and memes."
+  "lemmy_long_desc": "<1>Lemmy</1> is similar to sites like <2>Reddit</2>, <3>Lobste.rs</3>, or <4>Hacker News</4>: you subscribe to communities you're interested in, post links and discussions, then vote and comment on them. Lemmy isn't just a reddit alternative; its a network of interconnected communities ran by different people and organizations, all combining to create <5>a single, personalized front page</5> of your favorite news, articles, and memes.",
+  "open_source": "Open Source",
+  "open_source_desc": "Lemmy is and will always remain free, <1>open source</1> software, using the strong <2>copyleft</2> <3>AGPL License</3>.",
+  "blazing_fast": "Blazing Fast",
+  "blazing_fast_desc": "Made using some of the fastest frameworks and tools, including <1>Rust</1>, <2>Actix</2>, <3>Diesel</3>, <4>Inferno</4>, and <4>Typescript</4>.",
+  "mod_tools": "Powerful Mod Tools",
+  "mod_tools_desc": "Each server can set its own moderation policy, to help foster a healthy environment where all can feel comfortable contributing.",
+  "create_discussion_platform": "Create your own discussion platform",
+  "create_discussion_platform_desc": "With Lemmy, you can <1>easily host your own server</1>, and all these servers are <2>federated</2> (think email), and connected to the same universe, called the <3>Fediverse</3>. For a link aggregator, this means that someone registered on one server can subscribe to communities elsewhere, and can have discussions with people on a completely different server.",
+  "live_updates": "Live Updates",
+  "live_updates_desc": "New comments and posts stream in to your front page and inbox; No more page refreshes required.",
+  "more_features": "More Features",
+  "self_hostable": "Self hostable, easy to deploy, via <1>Docker</1>, or <2>Ansible</2>.",
+  "clean_interface": "Clean, mobile-friendly interface.",
+  "avatar_support": "User avatar support.",
+  "full_vote_scores": "Full vote scores <1>(+/-)</1> like old Reddit.",
+  "themes_including": "Themes, including light, dark, and solarized.",
+  "emojis_autocomplete": "Emojis with autocomplete support. Start typing <1>:</1>",
+  "user_tagging": "User tagging using <1>@</1>, Community tagging using <2>!</2>.",
+  "integrated_image_uploading": "Integrated image uploading in both posts and comments.",
+  "notifications_including": "Notifications, including via email.",
+  "i18n_support": "<1>i18n / internationalization support for &gt; 30 languages.</1>",
+  "rss_feeds": "RSS / Atom feeds for <1>All</1>, <2>Subscribed</2>, <3>Inbox</3>, <4>User</4>, and <5>Community</5>.",
+  "can_fully_erase": "Can fully erase your data, replacing all posts and comments.",
+  "nsfw_support": "NSFW post / community support.",
+  "support_donate": "Support / Donate"
 }
