Adding other pages.

--- a/translations/en.json
+++ b/translations/en.json
@@ -30,5 +30,30 @@
   "rss_feeds": "RSS / Atom feeds for <1>All</1>, <2>Subscribed</2>, <3>Inbox</3>, <4>User</4>, and <5>Community</5>.",
   "can_fully_erase": "Can fully erase your data, replacing all posts and comments.",
   "nsfw_support": "NSFW post / community support.",
-  "support_donate": "Support / Donate"
+  "support_donate": "Support / Donate",
+  "apps_title": "Lemmy - Apps and Libraries",
+  "lemmy_apps": "Lemmy Apps",
+  "choose_from_apps": "Choose from any of the apps below.",
+  "web_apps": "Web Apps",
+  "api_libraries": "API Libraries",
+  "contact_title": "Lemmy - Contact",
+  "contact": "Contact",
+  "donate_desc": "Lemmy is free, open-source software, meaning no advertising, monetizing, or venture capital, ever. <1>Your donations</1> directly support full-time development of the project.",
+  "support_on_liberapay": "Support on Liberapay",
+  "support_on_patreon": "Support on Patreon",
+  "support_on_opencollective": "Support on OpenCollective",
+  "footer_desc": "Made with <1>Inferno</1> and <2>Chota</2>",
+  "join": "Join",
+  "apps": "Apps",
+  "sponsors": "Sponsors",
+  "docs": "Docs",
+  "code_of_conduct": "Code of Conduct",
+  "coc": "CoC",
+  "join_title": "Lemmy - Join a Server",
+  "lemmy_servers": "Lemmy servers",
+  "choose_and_join": "Choose and join a server from the approved servers below.",
+  "sponsors_title": "Lemmy - Sponsors",
+  "donate_to_lemmy": "Donate to Lemmy",
+  "silver_sponsors_desc": "Silver Sponsors are those that pledged $40 to Lemmy.",
+  "general_sponsors_desc": "General Sponsors are those that pledged $10 to $39 to Lemmy."
 }
