--- a/translations/en.json
+++ b/translations/en.json
@@ -55,5 +55,10 @@
   "sponsors_title": "Lemmy - Sponsors",
   "donate_to_lemmy": "Donate to Lemmy",
   "silver_sponsors_desc": "Silver Sponsors are those that pledged $40 to Lemmy.",
-  "general_sponsors_desc": "General Sponsors are those that pledged $10 to $39 to Lemmy."
+  "general_sponsors_desc": "General Sponsors are those that pledged $10 to $39 to Lemmy.",
+  "support_lemmy": "Support Lemmy",
+  "contributers": "Contributors",
+  "thanks_translators": "A special thanks to our translators: ",
+  "thanks_coders": "A special thanks to our coders: ",
+  "add_weblate": "You can add translations via our <1>weblate</1>."
 }
