Changing from sponsors to support.

--- a/translations/en.json
+++ b/translations/en.json
@@ -52,7 +52,7 @@
   "join_title": "Lemmy - Join a Server",
   "lemmy_servers": "Lemmy servers",
   "choose_and_join": "Choose and join a server from the approved servers below.",
-  "sponsors_title": "Lemmy - Sponsors",
+  "support_title": "Lemmy - Support",
   "donate_to_lemmy": "Donate to Lemmy",
   "silver_sponsors_desc": "Silver Sponsors are those that pledged $40 to Lemmy.",
   "general_sponsors_desc": "General Sponsors are those that pledged $10 to $39 to Lemmy.",
