--- a/translations/en.json
+++ b/translations/en.json
@@ -46,6 +46,7 @@
   "join": "Join",
   "apps": "Apps",
   "sponsors": "Sponsors",
+  "support": "Support",
   "docs": "Docs",
   "code_of_conduct": "Code of Conduct",
   "coc": "CoC",
