--- a/translations/en.json
+++ b/translations/en.json
@@ -183,6 +183,7 @@
     "no_email_setup": "This server hasn't correctly set up email.",
     "email": "Email",
     "matrix_user_id": "Matrix User",
+    "invalid_matrix_id":"Invalid matrix id. Must be @user:instance.tld",
     "private_message_disclaimer":
       "Warning: Private messages in Lemmy are not secure. Please create an account on <1>Element.io</1> for secure messaging.",
     "send_notifications_to_email": "Send notifications to Email",
