Adding change password.

--- a/translations/en.json
+++ b/translations/en.json
@@ -173,6 +173,8 @@
     "unread_messages": "Unread Messages",
     "messages": "Messages",
     "password": "Password",
+    "change_password": "Change Password",
+    "password_changed": "Password Changed.",
     "invalid_password": "Invalid password. Password must be <= 60 characters.",
     "verify_password": "Verify Password",
     "old_password": "Old Password",
