Adding show scores.

--- a/translations/en.json
+++ b/translations/en.json
@@ -47,6 +47,7 @@
     "icon": "Icon",
     "upload_icon": "Upload Icon",
     "show_avatars": "Show Avatars",
+    "show_scores": "Show Scores",
     "show_context": "Show context",
     "formatting_help": "formatting help",
     "sorting_help": "sorting help",
