--- a/translations/en.json
+++ b/translations/en.json
@@ -131,6 +131,7 @@
     "prev": "Prev",
     "next": "Next",
     "sidebar": "Sidebar",
+    "description": "Description",
     "sort_type": "Sort type",
     "hot": "Hot",
     "active": "Active",
