Adding bot acct strings

--- a/translations/en.json
+++ b/translations/en.json
@@ -48,6 +48,8 @@
     "upload_icon": "Upload Icon",
     "show_avatars": "Show Avatars",
     "show_scores": "Show Scores",
+    "bot_account": "Bot Account",
+    "show_bot_accounts": "Show Bot Accounts",
     "show_context": "Show context",
     "formatting_help": "formatting help",
     "sorting_help": "sorting help",
