Show read posts

--- a/translations/en.json
+++ b/translations/en.json
@@ -50,6 +50,7 @@
     "show_scores": "Show Scores",
     "bot_account": "Bot Account",
     "show_bot_accounts": "Show Bot Accounts",
+    "show_read_posts": "Show Read Posts",
     "show_context": "Show context",
     "formatting_help": "formatting help",
     "sorting_help": "sorting help",
@@ -267,6 +268,7 @@
     "couldnt_get_posts": "Couldn't get posts",
     "couldnt_update_post": "Couldn't update post",
     "couldnt_save_post": "Couldn't save post.",
+    "couldnt_mark_post_as_read": "Couldn't mark post as read.",
     "couldnt_find_parent_comment": "Couldn't find parent comment.",
     "parent_comment_not_in_post": "The parent comment belongs to another post.",
     "no_slurs": "No slurs.",
