--- a/translations/en.json
+++ b/translations/en.json
@@ -17,6 +17,7 @@
     "number_of_comments_plural": "{{count}} Comments",
     "remove_comment": "Remove Comment",
     "remove_posts_comments": "Remove Posts and Comments",
+    "comment_here": "Type here to comment...",
     "communities": "Communities",
     "users": "Users",
     "create_a_community": "Create a community",
