--- a/translations/en.json
+++ b/translations/en.json
@@ -64,5 +64,7 @@
   "instance_totals": "The lemmyverse currently has {{instances}} instances, and {{users}} users.",
   "users": "users",
   "month": "month",
+  "about": "About",
+  "about_title": "About Lemmy",
   "add_weblate": "You can add translations via our <1>weblate</1>."
 }
