Adding websocket reconnect message.

--- a/translations/en.json
+++ b/translations/en.json
@@ -178,6 +178,7 @@
     "notifications_error":
       "Desktop notifications not available in your browser. Try Firefox or Chrome.",
     "websocket_disconnected": "Websocket disconnected",
+    "websocket_reconnected": "Websocket reconnected",
     "unread_messages": "Unread Messages",
     "messages": "Messages",
     "password": "Password",
