Adding a few helper texts

--- a/translations/en.json
+++ b/translations/en.json
@@ -20,10 +20,11 @@
     "comment_here": "Type here to comment...",
     "communities": "Communities",
     "users": "Users",
-    "create_a_community": "Create a community",
-    "select_a_community": "Select a community",
+    "create_a_community": "Create a Community",
+    "select_a_community": "Select a Community",
     "create_community": "Create Community",
     "remove_community": "Remove Community",
+    "explore_communities": "Explore Communities",
     "subscribed_to_communities": "Subscribed to <1>communities</1>",
     "trending_communities": "Trending <1>communities</1>",
     "trending": "Trending",
@@ -134,6 +135,7 @@
     "unsubscribe": "Unsubscribe",
     "subscribe": "Subscribe",
     "subscribed": "Subscribed",
+    "subscribed_description": "Shows the communities you've subscribed to",
     "prev": "Prev",
     "next": "Next",
     "sidebar": "Sidebar",
@@ -157,7 +159,9 @@
     "number_of_months": "{{count}} month",
     "number_of_months_plural": "{{count}} months",
     "all": "All",
+    "all_description": "Shows all communities, including federated ones",
     "local": "Local",
+    "local_description": "Shows only local communities",
     "top": "Top",
     "api": "API",
     "docs": "Docs",
