--- a/translations/en.json
+++ b/translations/en.json
@@ -79,6 +79,7 @@
     "moderates": "Moderates",
     "settings": "Settings",
     "admin_settings": "Admin Settings",
+    "profile": "Profile",
     "site_config": "Site Configuration",
     "remove_as_mod": "remove as mod",
     "appoint_as_mod": "appoint as mod",
