--- a/translations/en.json
+++ b/translations/en.json
@@ -319,6 +319,11 @@
     "linked_instances": "Linked Instances",
     "allowed_instances": "Allowed Instances",
     "blocked_instances": "Blocked Instances",
+    "blocked_users": "Blocked Users",
+    "block_user": "Block user",
+    "blocked_communities": "Blocked Communities",
+    "blocked": "Blocked",
+    "block_community": "Block community",
     "none_found": "None found.",
     "report_reason_required": "Report reason required.",
     "report_too_long": "Report too long.",
