--- a/translations/en.json
+++ b/translations/en.json
@@ -324,6 +324,8 @@
     "blocked_communities": "Blocked Communities",
     "blocked": "Blocked",
     "block_community": "Block community",
+    "unblock_user": "Unblock user",
+    "unblock_community": "Unblock community",
     "none_found": "None found.",
     "report_reason_required": "Report reason required.",
     "report_too_long": "Report too long.",
