--- a/translations/en.json
+++ b/translations/en.json
@@ -323,6 +323,7 @@
     "block_user": "Block user",
     "blocked_communities": "Blocked Communities",
     "blocked": "Blocked",
+    "unblocked": "Unblocked",
     "block_community": "Block community",
     "unblock_user": "Unblock user",
     "unblock_community": "Unblock community",
