--- a/translations/en.json
+++ b/translations/en.json
@@ -328,6 +328,7 @@
     "unblock_user": "Unblock user",
     "unblock_community": "Unblock community",
     "blocks": "Blocks",
+    "person_block": "This user has blocked you.",
     "none_found": "None found.",
     "report_reason_required": "Report reason required.",
     "report_too_long": "Report too long.",
