Adding remove_content string

--- a/translations/en.json
+++ b/translations/en.json
@@ -16,7 +16,8 @@
     "number_of_comments": "{{count}} Comment",
     "number_of_comments_plural": "{{count}} Comments",
     "remove_comment": "Remove Comment",
-    "remove_posts_comments": "Remove Posts and Comments",
+    "remove_content": "Remove Content",
+    "remove_content_more": "Remove Posts, Comments, and Communities",
     "comment_here": "Type here to comment...",
     "communities": "Communities",
     "users": "Users",
