--- a/translations/pl.json
+++ b/translations/pl.json
@@ -324,7 +324,7 @@
     "not_a_mod_or_admin": "Nie moderuje ani administruje.",
     "site_description_length_overflow": "Opis strony nie może przekraczać 150 znaków.",
     "comment_here": "Komentuj...",
-    "explore_communities": "Przeglądaj Społczności",
+    "explore_communities": "Przeglądaj Społeczności",
     "trending": "Popularne",
     "show_new_post_notifs": "Pokazuj powiadomienia dla nowych postów",
     "subscribed_description": "Pokazuje społeczności do których jesteś zapisany",
