--- a/translations/en.json
+++ b/translations/en.json
@@ -55,6 +55,7 @@
   "choose_and_join": "Choose and join a server from the approved servers below.",
   "support_title": "Lemmy - Support",
   "donate_to_lemmy": "Donate to Lemmy",
+  "gold_pressed_latinum_sponsors_desc": "Gold Pressed Latinum Sponsors are those that pledged $500 or more to Lemmy.",
   "gold_sponsors_desc": "Gold Sponsors are those that pledged $100 to Lemmy.",
   "silver_sponsors_desc": "Silver Sponsors are those that pledged $40 to Lemmy.",
   "general_sponsors_desc": "General Sponsors are those that pledged $10 to $39 to Lemmy.",
