--- a/translations/en.json
+++ b/translations/en.json
@@ -47,6 +47,7 @@
   "apps": "Apps",
   "sponsors": "Sponsors",
   "support": "Support",
+  "donate": "Donate", 
   "docs": "Docs",
   "code_of_conduct": "Code of Conduct",
   "coc": "CoC",
