--- a/translations/en.json
+++ b/translations/en.json
@@ -4,8 +4,8 @@
     "no_posts": "No Posts.",
     "create_a_post": "Create a post",
     "create_post": "Create Post",
-    "number_of_posts": "{{count}} Post",
-    "number_of_posts_plural": "{{count}} Posts",
+    "number_of_posts": "{{formattedCount}} Post",
+    "number_of_posts_plural": "{{formattedCount}} Posts",
     "posts": "Posts",
     "related_posts": "These posts might be related",
     "cross_posts": "This link has also been posted to:",
@@ -13,8 +13,8 @@
     "cross_posted_to": "cross-posted to: ",
     "cross_posted_from": "cross-posted from: ",
     "comments": "Comments",
-    "number_of_comments": "{{count}} Comment",
-    "number_of_comments_plural": "{{count}} Comments",
+    "number_of_comments": "{{formattedCount}} Comment",
+    "number_of_comments_plural": "{{formattedCount}} Comments",
     "remove_comment": "Remove Comment",
     "remove_content": "Remove Content",
     "remove_content_more": "Remove Posts, Comments, and Communities",
@@ -30,8 +30,8 @@
     "trending_communities": "Trending <1>communities</1>",
     "trending": "Trending",
     "list_of_communities": "List of communities",
-    "number_of_communities": "{{count}} Community",
-    "number_of_communities_plural": "{{count}} Communities",
+    "number_of_communities": "{{formattedCount}} Community",
+    "number_of_communities_plural": "{{formattedCount}} Communities",
     "community_reqs": "lowercase, underscores, and no spaces.",
     "invalid_community_name": "Invalid name.",
     "create_private_message": "Create Private Message",
@@ -118,14 +118,14 @@
     "creator": "creator",
     "username": "Username",
     "email_or_username": "Email or Username",
-    "number_of_users": "{{count}} user",
-    "number_of_users_plural": "{{count}} users",
-    "number_of_subscribers": "{{count}} subscriber",
-    "number_of_subscribers_plural": "{{count}} subscribers",
-    "number_of_points": "{{count}} point",
-    "number_of_points_plural": "{{count}} points",
-    "number_online": "{{count}} user online",
-    "number_online_plural": "{{count}} users online",
+    "number_of_users": "{{formattedCount}} user",
+    "number_of_users_plural": "{{formattedCount}} users",
+    "number_of_subscribers": "{{formattedCount}} subscriber",
+    "number_of_subscribers_plural": "{{formattedCount}} subscribers",
+    "number_of_points": "{{formattedCount}} point",
+    "number_of_points_plural": "{{formattedCount}} points",
+    "number_online": "{{formattedCount}} user online",
+    "number_online_plural": "{{formattedCount}} users online",
     "name": "Name",
     "name_explain": "Name – used as the identifier for the community, cannot be changed.",
     "display_name": "Display name",
@@ -158,8 +158,8 @@
     "day": "day",
     "week": "week",
     "month": "month",
-    "number_of_months": "{{count}} month",
-    "number_of_months_plural": "{{count}} months",
+    "number_of_months": "{{formattedCount}} month",
+    "number_of_months_plural": "{{formattedCount}} months",
     "all": "All",
     "all_description": "Shows all communities, including federated ones",
     "local": "Local",
@@ -213,11 +213,11 @@
     "downvotes_disabled": "Downvotes disabled",
     "enable_downvotes": "Enable Downvotes",
     "upvote": "Upvote",
-    "number_of_upvotes": "{{count}} Upvote",
-    "number_of_upvotes_plural": "{{count}} Upvotes",
+    "number_of_upvotes": "{{formattedCount}} Upvote",
+    "number_of_upvotes_plural": "{{formattedCount}} Upvotes",
     "downvote": "Downvote",
-    "number_of_downvotes": "{{count}} Downvote",
-    "number_of_downvotes_plural": "{{count}} Downvotes",
+    "number_of_downvotes": "{{formattedCount}} Downvote",
+    "number_of_downvotes_plural": "{{formattedCount}} Downvotes",
     "open_registration": "Open Registration",
     "registration_closed": "Registration closed",
     "enable_nsfw": "Enable NSFW",
