Getting rid of active_in_the_last

--- a/translations/en.json
+++ b/translations/en.json
@@ -145,7 +145,14 @@
     "sort_type": "Sort type",
     "hot": "Hot",
     "active": "Active",
-    "active_in_the_last": "active in the last",
+    "active_users_in_the_last_day": "{{formattedCount}} active user in the last day",
+    "active_users_in_the_last_day_plural": "{{formattedCount}} active users in the last day",
+    "active_users_in_the_last_week": "{{formattedCount}} active user in the last week",
+    "active_users_in_the_last_week_plural": "{{formattedCount}} active users in the last week",
+    "active_users_in_the_last_month": "{{formattedCount}} active user in the last month",
+    "active_users_in_the_last_month_plural": "{{formattedCount}} active users in the last month",
+    "active_users_in_the_last_six_months": "{{formattedCount}} active user in the last 6 months",
+    "active_users_in_the_last_six_months_plural": "{{formattedCount}} active users in the last 6 months",
     "new": "New",
     "old": "Old",
     "top_day": "Top Day",
