--- a/translations/en.json
+++ b/translations/en.json
@@ -153,6 +153,10 @@
     "active_users_in_the_last_month_plural": "{{formattedCount}} active users in the last month",
     "active_users_in_the_last_six_months": "{{formattedCount}} active user in the last 6 months",
     "active_users_in_the_last_six_months_plural": "{{formattedCount}} active users in the last 6 months",
+    "too_weak": "Too weak",
+    "weak": "Weak",
+    "medium": "Medium",
+    "Strong": "Strong",
     "new": "New",
     "old": "Old",
     "top_day": "Top Day",
