--- a/translations/en.json
+++ b/translations/en.json
@@ -156,7 +156,7 @@
     "too_weak": "Too weak",
     "weak": "Weak",
     "medium": "Medium",
-    "Strong": "Strong",
+    "strong": "Strong",
     "new": "New",
     "old": "Old",
     "top_day": "Top Day",
