Adding report strings

--- a/translations/en.json
+++ b/translations/en.json
@@ -198,7 +198,10 @@
       "Desktop notifications not available in your browser. Try Firefox or Chrome.",
     "websocket_disconnected": "Websocket disconnected",
     "websocket_reconnected": "Websocket reconnected",
-    "unread_messages": "Unread Messages",
+    "unread_messages": "{{formattedCount}} Unread Message",
+    "unread_messages_plural": "{{formattedCount}} Unread Messages",
+    "unread_reports": "{{formattedCount}} Unread Report",
+    "unread_reports_plural": "{{formattedCount}} Unread Reports",
     "messages": "Messages",
     "password": "Password",
     "change_password": "Change Password",
@@ -349,5 +352,12 @@
     "expand": "Expand",
     "collapse": "Collapse",
     "captcha": "Captcha",
+    "reports": "Reports",
+    "reporter": "Reporter",
+    "resolved_by": "Resolved by <1></1>",
+    "unresolved_by": "Unresolved by <1></1>",
+    "show_report_dialog": "Show Report Dialog",
+    "create_report": "Create Report",
+    "report_created": "Report Created.",
     "lemmy_ml_registration_message": "Before you register on lemmy.ml, please have a look at <1>Joinlemmy</1> to see if there is an instance that better fits your region, language or interests. Lemmy is federated, so you can interact with everything that you see on lemmy.ml, even if you are registered on another instance."
 }
