Adding some translations

--- a/translations/en.json
+++ b/translations/en.json
@@ -202,6 +202,8 @@
     "unread_messages_plural": "{{formattedCount}} Unread Messages",
     "unread_reports": "{{formattedCount}} Unread Report",
     "unread_reports_plural": "{{formattedCount}} Unread Reports",
+    "unread_registration_applications": "{{formattedCount}} Unread Application",
+    "unread_registration_applications_plural": "{{formattedCount}} Unread Applications",
     "messages": "Messages",
     "password": "Password",
     "change_password": "Change Password",
@@ -273,6 +275,7 @@
     "site_saved": "Site Saved.",
     "community_ban": "You have been banned from this community.",
     "site_ban": "You have been banned from the site",
+    "couldnt_find_comment": "Couldn't find comment.",
     "couldnt_create_comment": "Couldn't create comment.",
     "couldnt_like_comment": "Couldn't like comment.",
     "couldnt_update_comment": "Couldn't update comment.",
@@ -362,5 +365,26 @@
     "resolve_report": "Resolve Report",
     "unresolve_report": "Unresolve Report",
     "report_created": "Report Created.",
+    "fill_out_application": "To join this server, you need to fill out this application, and wait to be accepted.",
+    "answer": "Answer",
+    "verify_email_sent": "Verification email sent.",
+    "registration_application_sent": "Registration application sent.",
+    "application_questionnaire": "Application Questionnaire",
+    "require_email_verification": "Require email verification",
+    "require_registration_application": "Require registration application",
+    "private_instance": "Private Instance",
+    "registration_application_pending": "Registration approval pending.",
+    "email_not_verified": "Email not verified.",
+    "email_required": "Email required.",
+    "registration_application_answer_required": "Registration application required.",
+    "instance_is_private": "This instance is private.",
+    "registration_applications": "Registration Applications",
+    "applicant": "Applicant", 
+    "deny_reason": "Deny Reason", 
+    "approved_by": "Approved by <1></1>",
+    "denied_by": "Denied by <1></1>",
+    "approve": "Approve",
+    "deny": "Deny",
+    "required": "Required",
     "lemmy_ml_registration_message": "Before you register on lemmy.ml, please have a look at <1>Joinlemmy</1> to see if there is an instance that better fits your region, language or interests. Lemmy is federated, so you can interact with everything that you see on lemmy.ml, even if you are registered on another instance."
 }
