Adding some translations for email

--- a/translations/en.json
+++ b/translations/en.json
@@ -367,6 +367,7 @@
     "report_created": "Report Created.",
     "fill_out_application": "To join this server, you need to fill out this application, and wait to be accepted.",
     "answer": "Answer",
+    "verify_email": "Verify Email",
     "verify_email_sent": "Verification email sent.",
     "registration_application_sent": "Registration application sent.",
     "application_questionnaire": "Application Questionnaire",
@@ -374,7 +375,9 @@
     "require_registration_application": "Require registration application",
     "private_instance": "Private Instance",
     "registration_application_pending": "Registration approval pending.",
+    "registration_denied": "Registration application denied.",
     "email_not_verified": "Email not verified.",
+    "email_verified": "Your email has been verified.",
     "email_required": "Email required.",
     "registration_application_answer_required": "Registration application required.",
     "instance_is_private": "This instance is private.",
