--- a/translations/en.json
+++ b/translations/en.json
@@ -171,6 +171,7 @@
     "month": "month",
     "number_of_months": "{{formattedCount}} month",
     "number_of_months_plural": "{{formattedCount}} months",
+    "number_of_days": "Number of days",
     "all": "All",
     "all_description": "Shows all communities, including federated ones",
     "local": "Local",
