Add apply to join.

--- a/translations/en.json
+++ b/translations/en.json
@@ -44,6 +44,7 @@
   "support_on_opencollective": "Support on OpenCollective",
   "footer_desc": "Made with <1>Inferno</1> and <2>Chota</2>",
   "join": "Join",
+  "apply_to_join": "Apply to Join",
   "apps": "Apps",
   "sponsors": "Sponsors",
   "support": "Support",
