Adding leave admin team strings.

--- a/translations/en.json
+++ b/translations/en.json
@@ -80,6 +80,9 @@
     "moderates": "Moderates",
     "settings": "Settings",
     "admin_settings": "Admin Settings",
+    "cannot_leave_admin": "You cannot leave the server without an admin",
+    "leave_admin_team": "Leave the admin team",
+    "left_admin_team": "You have left the admin team",
     "profile": "Profile",
     "site_config": "Site Configuration",
     "remove_as_mod": "remove as mod",
