Add mobile apps.

--- a/translations/en.json
+++ b/translations/en.json
@@ -31,6 +31,7 @@
   "can_fully_erase": "Can fully erase your data, replacing all posts and comments.",
   "nsfw_support": "NSFW post / community support.",
   "support_donate": "Support / Donate",
+  "mobile_apps_for_ios_and_android": "Mobile apps for iOS and Android.",
   "apps_title": "Lemmy - Apps and Libraries",
   "lemmy_apps": "Lemmy Apps",
   "choose_from_apps": "Choose from any of the apps below.",
