--- a/translations/en.json
+++ b/translations/en.json
@@ -5,7 +5,7 @@
   "lemmy": "Lemmy",
   "lemmy_desc": "A link aggregator for the fediverse.",
   "follow_communities": "Follow communities anywhere in the world",
-  "lemmy_long_desc": "<1>Lemmy</1> is similar to sites like <2>Reddit</2>, <3>Lobste.rs</3>, or <4>Hacker News</4>: you subscribe to communities you're interested in, post links and discussions, then vote and comment on them. Lemmy isn't just a reddit alternative; its a network of interconnected communities ran by different people and organizations, all combining to create <5>a single, personalized front page</5> of your favorite news, articles, and memes.",
+  "lemmy_long_desc": "Lemmy is a selfhosted social link aggregation and discussion platform. It is completely free and open, and not controlled by any company. This means that there is no advertising, tracking, or secret algorithms. Content is organized into communities, so it is easy to subscribe to topics that you are interested in, and ignore others. Voting is used to bring the most interesting items to the top.",
   "open_source": "Open Source",
   "open_source_desc": "Lemmy is and will always remain free, <1>open source</1> software, using the strong <2>copyleft</2> <3>AGPL License</3>.",
   "blazing_fast": "Blazing Fast",
