Add legal information

--- a/translations/en.json
+++ b/translations/en.json
@@ -397,5 +397,6 @@
     "deny": "Deny",
     "required": "Required",
     "lemmy_ml_registration_message": "Before you register on lemmy.ml, please have a look at <1>Joinlemmy</1> to see if there is an instance that better fits your region, language or interests. Lemmy is federated, so you can interact with everything that you see on lemmy.ml, even if you are registered on another instance.",
-    "default_theme": "Default theme"
+    "default_theme": "Default theme",
+    "legal_information": "Legal"
 }
