Adding purge strings.

--- a/translations/en.json
+++ b/translations/en.json
@@ -116,6 +116,13 @@
     "unban_from_site": "unban from site",
     "banned": "banned",
     "banned_users": "Banned Users",
+    "purge": "purge", 
+    "purge_post": "purge post",
+    "purge_comment": "purge comment",
+    "purge_community": "purge community",
+    "purge_user": "purge user",
+    "purge_warning": "Warning: Purging will delete this item, and all its children from the database. You will not be able to recover the data. Use with extreme caution.",
+    "purge_success": "The item has been successfully purged.",
     "save": "save",
     "unsave": "unsave",
     "create": "create",
