Adding view all comments and more replies.

--- a/translations/en.json
+++ b/translations/en.json
@@ -60,6 +60,7 @@
     "formatting_help": "formatting help",
     "sorting_help": "sorting help",
     "view_source": "view source",
+    "view_all_comments": "View all comments",
     "unlock": "unlock",
     "lock": "lock",
     "sticky": "sticky",
@@ -198,6 +199,8 @@
     "type": "Type",
     "unread": "Unread",
     "replies": "Replies",
+    "x_more_replies": "{{formattedCount}} more reply",
+    "x_more_replies_plural": "{{formattedCount}} more replies",
     "mentions": "Mentions",
     "reply_sent": "Reply sent",
     "message_sent": "Message sent",
