--- a/translations/en.json
+++ b/translations/en.json
@@ -74,6 +74,6 @@
   "releases": "Lemmy Releases",
   "add_weblate": "You can add translations via our <1>weblate</1>.",
   "recommended_instances": "Recommended",
-  "popular_instances": "Popular"
+  "popular_instances": "Popular",
   "users_active_per_month": "{{count}} users / month"
 }
