--- a/translations/en.json
+++ b/translations/en.json
@@ -75,5 +75,5 @@
   "add_weblate": "You can add translations via our <1>weblate</1>.",
   "recommended_instances": "Recommended",
   "popular_instances": "Popular",
-  "users_active_per_month": "{{count}} users / month"
+  "users_active_per_month": "{{formattedCount}} users / month"
 }
