--- a/translations/en.json
+++ b/translations/en.json
@@ -390,6 +390,7 @@
     "application_questionnaire": "Application Questionnaire",
     "require_email_verification": "Require email verification",
     "require_registration_application": "Require registration application",
+    "application_email_admins": "Email admins on receiving new applications",
     "private_instance": "Private Instance",
     "registration_application_pending": "Registration approval pending.",
     "registration_denied": "Registration application denied.",
