Adding languages plural

--- a/translations/en.json
+++ b/translations/en.json
@@ -246,7 +246,9 @@
     "send_notifications_to_email": "Send notifications to Email",
     "optional": "Optional",
     "expires": "Expires",
+    "interface_language": "Interface Language",
     "language": "Language",
+    "language_plural": "Languages",
     "browser_default": "Browser Default",
     "downvotes_disabled": "Downvotes disabled",
     "enable_downvotes": "Enable Downvotes",
