--- a/translations/en.json
+++ b/translations/en.json
@@ -45,7 +45,8 @@
     "preview": "Preview",
     "upload_image": "upload image", 
     "too_many_images_upload": "Exceeded maximum of {maxFormatted} image to upload. Please select only one image.",
-    "too_many_images_upload_plural": "Exceeded maximum of {maxFormatted} images to upload. Please select fewer images.",    "avatar": "Avatar",
+    "too_many_images_upload_plural": "Exceeded maximum of {maxFormatted} images to upload. Please select fewer images.",    
+    "avatar": "Avatar",
     "upload_avatar": "Upload Avatar",
     "banner": "Banner",
     "upload_banner": "Upload Banner",
