--- a/translations/en.json
+++ b/translations/en.json
@@ -44,8 +44,8 @@
     "cancel": "Cancel",
     "preview": "Preview",
     "upload_image": "upload image", 
-    "too_many_images_upload": "Exceeded maximum of {maxFormatted} image to upload. Please select only one image.",
-    "too_many_images_upload_plural": "Exceeded maximum of {maxFormatted} images to upload. Please select fewer images.",    
+    "too_many_images_upload": "Exceeded maximum of {{formattedCount}} image to upload. Please select only one image.",
+    "too_many_images_upload_plural": "Exceeded maximum of {{formattedCount}} images to upload. Please select fewer images.",    
     "avatar": "Avatar",
     "upload_avatar": "Upload Avatar",
     "banner": "Banner",
