--- a/translations/en.json
+++ b/translations/en.json
@@ -43,7 +43,9 @@
     "more": "more",
     "cancel": "Cancel",
     "preview": "Preview",
-    "upload_image": "upload image",
+    "upload_image": "upload image", 
+    "too_many_images_upload": "Exceeded maximum of {{formattedCount}} image to upload. Please select only one image.",
+    "too_many_images_upload_plural": "Exceeded maximum of {{formattedCount}} images to upload. Please select fewer images.",    
     "avatar": "Avatar",
     "upload_avatar": "Upload Avatar",
     "banner": "Banner",
